# forge

./: .gitignore  HANDOFF.md  README.md  pyproject.toml
docs/: CANONICAL_WORKFLOW.md
examples/: test_sdk_integration.py
src/forge/: __init__.py  cli.py  orchestrator.py  router.py
src/forge/agents/: __init__.py  actions.py  api_architect.py  base.py  claude_agent.py  direct_llm_agent.py  infrastructure.py  persona_tester.py  solution_architect.py  specialists.py  subagent.py
src/forge/config/: __init__.py  settings.py
src/forge/memory/: __init__.py  condenser.py  manager.py  vector_store.py
src/forge/schemas/: __init__.py  change_plan.py  eval_result.py  finding.py  message.py  workflow.py
src/forge/tools/: __init__.py  code.py  forge_tools.py  git.py  mcp.py
src/forge/utils/: __init__.py  cost_tracker.py  logging.py
